# Chronvisor

./: .gitignore  CHRONOVISOR_VALIDATION_REPORT.md  CLAUDE_INSTRUCTIONS.md  HALCYON_MATH_REVIEW.md  Makefile  README.md  Summary  ablation_study_results.txt  geological_seed_robustness.txt  geological_validation_summary.md  long_conversation_flow_test.txt  pyproject.toml  requirements.txt  sweet_spot_long_conversations.txt
docs/: 001-first-results.md  002-chronomoe-temperature-geometry.md  002-mixtral-integration.md  003-ontology-robustness.md  003-pt-geometry-integration.md  004-hierarchical-structural-temperature.md  004-valley-self-correction.md  005-seven-guarantees.md  005-training-infrastructure.md
experiments/: ablation_study.py  analyze_turn_usage.py  conversational_dataset.py  debug_structural_T.py  diagnose_tbar_activity.py  frozen_vs_live_comparison.py  generate_long_geeky_conversations.py  geological_ridge_sweep.py  geological_seismograph.py  refine_geological_sweet_spot.py  synthetic_dataset.py  test_geological_flow_on_long_conversations.py  test_geological_seed_robustness.py  test_geology_at_high_eta.py  test_sweet_spot_on_long_conversations.py  train_three_domains.py  validate_turn_tracking.py
refined_sweet_spot_results/: summary.txt
src/chronomoe/: __init__.py  (+14 more)
tests/: test_alignment_v7.py  test_chrono_moe.py  test_chronomoe.py  test_chronovisor.py  test_controller.py  test_directionality_guarantee.py  test_expert_harness.py  test_knob.py  test_simulation.py  test_simulation_v3.py  test_simulation_v4.py  test_simulation_v6.py  test_temperature.py
(+10 files in other folders)
